# java21-JNI

./: README.md  api_matching_orders_post.sh  curl.sh  mvnw
api/matching/orders/: list.sh  submit.sh
demo/: pom.xml
demo/src/main/java/com/example/demo/matching/: NativeMatchingEngine.java
native/: CMakeLists.txt
native/include/: matching_engine.hpp
native/src/: jni_bridge.cpp  matching_engine.cpp
src/main/java/com/example/demo/matching/: MatchingController.java  NativeMatchingEngine.java
